// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchDropdownOverlay uses default top value if not provided 1`] = `
<View
  style={
    [
      {
        "left": 16,
        "maxHeight": 300,
        "position": "absolute",
        "right": 16,
        "top": 70,
        "zIndex": 100,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    nestedScrollEnabled={true}
    scrollEnabled={false}
    showsVerticalScrollIndicator={true}
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "borderRadius": 8,
        "borderWidth": 1,
        "elevation": 8,
        "maxHeight": 300,
        "overflow": "hidden",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderBottomColor": "#E0E0E0",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "gap": 12,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#E3F2FD",
              "borderRadius": 24,
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333333",
                "fontSize": 20,
                "fontWeight": "bold",
              }
            }
          >
            J
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333333",
                "fontSize": 16,
                "fontWeight": "600",
                "marginBottom": 4,
              }
            }
          >
            John Doe
          </Text>
          <Text
            style={
              {
                "color": "#666666",
                "fontSize": 12,
              }
            }
          >
            john@example.com
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderBottomColor": "#E0E0E0",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "gap": 12,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#E3F2FD",
              "borderRadius": 24,
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333333",
                "fontSize": 20,
                "fontWeight": "bold",
              }
            }
          >
            J
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333333",
                "fontSize": 16,
                "fontWeight": "600",
                "marginBottom": 4,
              }
            }
          >
            Jane Smith
          </Text>
          <Text
            style={
              {
                "color": "#666666",
                "fontSize": 12,
              }
            }
          >
            jane@example.com
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`SearchDropdownOverlay uses scrollEnabledThreshold to control ScrollView: Scroll Disabled 1`] = `
<View
  style={
    [
      {
        "left": 16,
        "maxHeight": 300,
        "position": "absolute",
        "right": 16,
        "top": 70,
        "zIndex": 100,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    nestedScrollEnabled={true}
    scrollEnabled={false}
    showsVerticalScrollIndicator={true}
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "borderRadius": 8,
        "borderWidth": 1,
        "elevation": 8,
        "maxHeight": 300,
        "overflow": "hidden",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderBottomColor": "#E0E0E0",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "gap": 12,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#E3F2FD",
              "borderRadius": 24,
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333333",
                "fontSize": 20,
                "fontWeight": "bold",
              }
            }
          >
            J
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333333",
                "fontSize": 16,
                "fontWeight": "600",
                "marginBottom": 4,
              }
            }
          >
            John Doe
          </Text>
          <Text
            style={
              {
                "color": "#666666",
                "fontSize": 12,
              }
            }
          >
            john@example.com
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderBottomColor": "#E0E0E0",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "gap": 12,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#E3F2FD",
              "borderRadius": 24,
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333333",
                "fontSize": 20,
                "fontWeight": "bold",
              }
            }
          >
            J
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333333",
                "fontSize": 16,
                "fontWeight": "600",
                "marginBottom": 4,
              }
            }
          >
            Jane Smith
          </Text>
          <Text
            style={
              {
                "color": "#666666",
                "fontSize": 12,
              }
            }
          >
            jane@example.com
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`SearchDropdownOverlay uses scrollEnabledThreshold to control ScrollView: Scroll Enabled 1`] = `
<View
  style={
    [
      {
        "left": 16,
        "maxHeight": 300,
        "position": "absolute",
        "right": 16,
        "top": 70,
        "zIndex": 100,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    nestedScrollEnabled={true}
    scrollEnabled={true}
    showsVerticalScrollIndicator={true}
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E0E0E0",
        "borderRadius": 8,
        "borderWidth": 1,
        "elevation": 8,
        "maxHeight": 300,
        "overflow": "hidden",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 8,
      }
    }
  >
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderBottomColor": "#E0E0E0",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "gap": 12,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#E3F2FD",
              "borderRadius": 24,
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333333",
                "fontSize": 20,
                "fontWeight": "bold",
              }
            }
          >
            J
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333333",
                "fontSize": 16,
                "fontWeight": "600",
                "marginBottom": 4,
              }
            }
          >
            John Doe
          </Text>
          <Text
            style={
              {
                "color": "#666666",
                "fontSize": 12,
              }
            }
          >
            john@example.com
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "borderBottomColor": "#E0E0E0",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "gap": 12,
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#E3F2FD",
              "borderRadius": 24,
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333333",
                "fontSize": 20,
                "fontWeight": "bold",
              }
            }
          >
            J
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#333333",
                "fontSize": 16,
                "fontWeight": "600",
                "marginBottom": 4,
              }
            }
          >
            Jane Smith
          </Text>
          <Text
            style={
              {
                "color": "#666666",
                "fontSize": 12,
              }
            }
          >
            jane@example.com
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
